Update codedeploy role

--- a/roles/codedeploy/tasks/main.yml
+++ b/roles/codedeploy/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 # tasks file for codedeploy
 - name: Installs and starts the AWS CodeDeploy Agent
-  aws_codedeploy: 
-    enabled: yes  
+  sudo: yes
+  action: aws_codedeploy enabled=true
