--- a/roles/ansible-springboot-role/tasks/copy_springboot_application_local.yml
+++ b/roles/ansible-springboot-role/tasks/copy_springboot_application_local.yml
@@ -1,5 +1,6 @@
 - name: "Copy jar application"
   copy:
+    remote_src: True
     src: "{{ spring_boot_file }}"
     dest: "{{ spring_boot_user_dir }}/{{ spring_boot_application_id }}.jar"
     owner: "{{ spring_boot_username }}"
