--- a/roles/ansible-springboot-role/handlers/main.yml
+++ b/roles/ansible-springboot-role/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for ansible-springboot-role
+
+- name: restart bootrest
+  service:
+    name: {{ spring_boot_application_id }}
+    state: restarted
